--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -6,10 +6,10 @@ body,html {
     overflow: hidden;
     background-color: $default-bg;
     -webkit-touch-callout:none;
-    -webkit-user-select:none;
-    -khtml-user-select:none;
-    -moz-user-select:none;
+    -webkit-touch-select:none;
     -ms-user-select:none;
+    -moz-user-select:none;
+    -webkit-user-select:none;
     user-select:none;
     -webkit-tap-highlight-color:rgba(0,0,0,0);
     font-family: 'Noto Sans KR', sans-serif;
