--- a/src/views/partials/type2.pug
+++ b/src/views/partials/type2.pug
@@ -28,4 +28,4 @@
         .sharedImage
             img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EC%9C%A0%ED%98%95/%EA%B3%B5%EC%9C%A0%ED%95%98%EA%B8%B0.png")
         .addThis
-            .addthis_inline_share_toolbox_eouf
+            //- .addthis_inline_share_toolbox_eouf
