--- a/src/assets/scss/screens/iphoneXr.scss
+++ b/src/assets/scss/screens/iphoneXr.scss
@@ -1,4 +1,4 @@
-@media (min-height: 671px) and (max-height: 740px){
+@media (min-height: 815px) and (max-height: 900px){
     body{
         .slider{
             .start{
@@ -6,37 +6,37 @@
                     .content__row{
                         .topImage{
                             img.description{
-                                top: -33px;
-                                right: -58px;
-                                height: 40px;
+                                top: -42px;
+                                right: -68px;
+                                height: 50px;
                             }
                             img.main{
-                                height: 120px;
+                                height: 160px;
                             }
                         }
                         .title{
                             div:nth-child(1){
-                                font-size: 28px;
+                                font-size: 35px;
                             }
                             div:nth-child(2){
-                                font-size: 31px;
+                                font-size: 38px;
                             }
                             div:nth-child(3){
                                 padding: 5px 7px;
-                                font-size: 15px;
+                                font-size: 18px;
                             }
                         }
                     }
                     .bookImage{
-                        margin: 20px;
+                        margin: 30px;
                         img{
-                            height: 240px;
+                            height: 270px;
                         }
                     }
                     .startBtn{
                         .button{
                             img{
-                                height: 100px;
+                                height: 120px;
                             }
                         }
                     }
@@ -45,37 +45,37 @@
         }
         .question{
             .slide__content{
-                width: 87%;
+                width: 90%;
                 .topImage{
-                    top: -20px;
+                    top: -15px;
                 }
                 .content__row{
-                    margin-top: 30px;
-                    padding-top: 60px;
+                    margin-top: 40px;
+                    padding-top: 80px;
                     .count{
-                        top: -20px;
+                        top: -25px;
                         img{
-                            height: 40px;
+                            height: 60px;
                         }
                     }
                     .main{
                         .main__text{
-                            margin-bottom: 35px;
+                            margin-bottom: 50px;
                             span{
-                                font-size: 19px;
+                                font-size: 23px;
                             }
                         }
                         .main__image{
                             img{
-                                height: 230px;
+                                height: 250px;
                             }
                         }
                     }
                 }
                 .buttons{
                     .button{
-                        padding: 9px 0;
-                        font-size: 16px;
+                        padding: 12px 0;
+                        font-size: 17px;
                     }
                 }
             }
@@ -84,45 +84,47 @@
             .slide__content{
                 .content__row{
                     .questionTitle{
-                        font-size: 21px;  
+                        font-size: 24px;  
                         margin-bottom: 15px; 
                         span{
                             focus{
-                                font-size: 22px;
+                                font-size: 25px;
                             }
                         }
                     }
                     .mainTitle{
                         span{
-                            font-size: 22px;
+                            font-size: 25px;
                         }
                     }
                 }
                 .bookImage{
-                    margin: 25px 0;
+                    margin: 37px 0;
                     img{
-                        height: 240px;
+                        height: 270px;
                     }
                 }
                 .loadingComment{
                     .comment{
                         span{
-                            font-size: 17px;
+                            font-size: 20px;
                         }
                     }
                     .loadingAnimation{
+                        padding: 8px 20px;
+                        border-radius: 15px;
                         span{
-                            font-size: 15px;
+                            font-size: 19px;
                         }
                         .dot{
-                            width: 4px;
-                            height: 4px;
+                            width: 5px;
+                            height: 5px;
                         }
                     }
                     .resultBtn{
                         .button{
                             img{
-                                height: 130px;
+                                height: 150px;
                             }
                         }
                     }
@@ -134,43 +136,45 @@
                 .type{
                     .title{
                         .title__type{
+                            margin-bottom: 20px;
                             span{
-                                font-size: 26px;
+                                font-size: 32px;
                             }
                         }
                         .title__battery{
+                            padding: 7px 10px;
                             span{
-                                font-size: 16px;    
+                                font-size: 20px;    
                             }
                         }
                     }
                     .content__row{
-                        margin: 30px 0;
+                        margin: 40px 0;
                         .mainImage{
                             margin-bottom: 30px;
                             img{
-                                height: 240px;
+                                height: 300px;
                             }
                         }
                         .info{
                             span{
-                                font-size: 20px;
+                                font-size: 26px;
                                 strong{
-                                    font-size: 26px;
+                                    font-size: 32px;
                                 }
                             }
                         }
                         .friends{
                             .good,
                             .bad{
-                                font-size: 17px;
+                                font-size: 20px;
                             }
                         }
                     }
                     .sharedSNS{
                         .sharedImage{
                             img{
-                                height: 42px;
+                                height: 50px;
                             }
                         }
                     }
