--- a/src/assets/scss/screens/ipad.scss
+++ b/src/assets/scss/screens/ipad.scss
@@ -76,7 +76,7 @@
                 .buttons{
                     .button{
                         padding: 10px 0;
-                        font-size: 23px;
+                        font-size: 23spx;
                     }
                 }
             }
