--- a/src/views/screens/loading.pug
+++ b/src/views/screens/loading.pug
@@ -2,15 +2,25 @@
     .slide__content
         .content__row
             .questionTitle
-                span 외롭지도, 피곤하지도 않은<br><focus>'친구와의 적당한 거리'</focus>가 궁금하다면?
+                span 외롭지도, 피곤하지도 않은
+                    br
+                    focus '친구와의 적당한 거리'
+                    | 가 궁금하다면?
             .mainTitle
-                span 에세이<focus>《적당히 가까운 사이》</focus>를<br>가까운 서점에서 만나보세요!
+                span 에세이
+                    focus《적당히 가까운 사이를
+                    br
+                    | 가까운 서점에서 만나보세요!
         .bookImage
             //- 샘플이미지
             img(src="https://cdn.imweb.me/thumbnail/20200316/2948e081b267c.jpg" alt="")
         .loadingComment
             .comment
-                span 관태기 테스트는 댄싱스네일 작가의 에세이<br><focus>《적당히 가까운 사이》</focus><br>에피소드를 재구성해 제작하였습니다.
+                span 관태기 테스트는 댄싱스네일 작가의 에세이
+                    br
+                    focus《적당히 가까운 사이》
+                    br
+                    | 에피소드를 재구성해 제작하였습니다.
             .loadingAnimation
                 .dot
                 .dot
