--- a/src/views/screens/question1.pug
+++ b/src/views/screens/question1.pug
@@ -7,7 +7,11 @@
                 img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C1%EC%88%AB%EC%9E%90%EC%9B%90.png")
             .main
                 .main__text
-                    span 혼자만의 시간을 보내고 있던 당신,<br>이때 동창 친구들의<br>단톡방에 초대된다면 당신은?
+                    span 혼자만의 시간을 보내고 있던 당신,
+                        br
+                        | 이때 동창 친구들의
+                        br
+                        | 단톡방에 초대된다면 당신은?
                 .main__image
                     img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C1%EC%9D%B4%EB%AF%B8%EC%A7%80.png")
         .buttons
