--- a/src/views/screens/question10.pug
+++ b/src/views/screens/question10.pug
@@ -7,7 +7,9 @@
                 img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C10%EC%88%AB%EC%9E%90%EC%9B%90.png")
             .main
                 .main__text
-                    span 친구와 약속이 있던 당일,<br>갑자기 취소 통보를 받았을 때 당신은?
+                    span 친구와 약속이 있던 당일,
+                        br
+                        | 갑자기 취소 통보를 받았을 때 당신은?
                 .main__image
                     img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C10%EC%9D%B4%EB%AF%B8%EC%A7%80.png")
         .buttons
