--- a/src/views/screens/question11.pug
+++ b/src/views/screens/question11.pug
@@ -7,7 +7,9 @@
                 img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C11%EC%88%AB%EC%9E%90%EC%9B%90.png")
             .main
                 .main__text
-                    span 야근 후 퇴근하던 길에 갑자기<br>외로움을 느낀 당신의 행동은?
+                    span 야근 후 퇴근하던 길에 갑자기
+                        br
+                        | 외로움을 느낀 당신의 행동은?
                 .main__image
                     img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C11%EC%9D%B4%EB%AF%B8%EC%A7%80.png")
         .buttons
@@ -22,5 +24,7 @@
                 span 친한 친구와 바로 약속을 잡는다
             .button.selectBtn(data-id="4" ontouchstart="")
                 span ④
-                span 탄수화물 부족인가?<br>배달 앱을 켜 기분 전환용 음식을 시킨다
+                span 탄수화물 부족인가?
+                    br
+                    | 배달 앱을 켜 기분 전환용 음식을 시킨다
         
