--- a/src/views/screens/question2.pug
+++ b/src/views/screens/question2.pug
@@ -7,13 +7,17 @@
                 img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C2%EC%88%AB%EC%9E%90%EC%9B%90.png")
             .main
                 .main__text
-                    span 친한 친구와의 식사 자리에서<br>메뉴를 고를 때, 당신의 선택은?
+                    span 친한 친구와의 식사 자리에서
+                        br
+                        | 메뉴를 고를 때, 당신의 선택은?
                 .main__image
                     img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C2%EC%9D%B4%EB%AF%B8%EC%A7%80.png")
         .buttons
             .button.selectBtn(data-id="1" ontouchstart="")
                 span ①
-                span 옆 테이블 사람에게<br>먹고있는 메뉴를 물어본다
+                span 옆 테이블 사람에게
+                    br
+                    | 먹고있는 메뉴를 물어본다
             .button.selectBtn(data-id="2" ontouchstart="")
                 span ②
                 span 내가 먹고 싶은 메뉴 위주로 주문한다
