--- a/src/views/screens/question3.pug
+++ b/src/views/screens/question3.pug
@@ -7,7 +7,13 @@
                 img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C3%EC%88%AB%EC%9E%90%EC%9B%90.png")
             .main
                 .main__text
-                    span 출근길, 사무실로 올라가는 엘리베이터에서<br>얼굴만 아는 옆 부서 회사 동료를 만났을 때 당신의 행동은?
+                    span 출근길,
+                        br
+                        | 사무실로 올라가는 엘리베이터에서
+                        br
+                        | 얼굴만 아는 옆 부서 회사 동료를
+                        br
+                        | 만났을 때 당신의 행동은?
                 .main__image
                     img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C3%EC%9D%B4%EB%AF%B8%EC%A7%80.png")
         .buttons
