--- a/src/views/screens/question4.pug
+++ b/src/views/screens/question4.pug
@@ -7,7 +7,11 @@
                 img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C4%EC%88%AB%EC%9E%90%EC%9B%90.png")
             .main
                 .main__text
-                    span 연락한 지 오래된 친구와의 사진이<br>3년 전 오늘이라며 SNS에 떴을 때 당신은?
+                    span 연락한 지 오래된 친구와의 사진이
+                        br
+                        | 3년 전 오늘이라며 SNS에 떴을 때
+                        br
+                        | 당신은?
                 .main__image
                     img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C4%EC%9D%B4%EB%AF%B8%EC%A7%80.png")
         .buttons
@@ -16,7 +20,9 @@
                 span 오랜만에 친구에게 연락을 해 본다
             .button.selectBtn(data-id="2" ontouchstart="")
                 span ②
-                span 내 과거 사진을 보면서<br>지금은 용 됐다고 생각한다
+                span 내 과거 사진을 보면서
+                    br
+                    | 지금은 용 됐다고 생각한다
             .button.selectBtn(data-id="3" ontouchstart="")
                 span ③
                 span 멀어진 사이를 혼자 씁쓸해한다
