--- a/src/views/screens/question7.pug
+++ b/src/views/screens/question7.pug
@@ -7,7 +7,9 @@
                 img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C7%EC%88%AB%EC%9E%90%EC%9B%90.png")
             .main
                 .main__text
-                    span 오랜만에 만난 친구가<br>계속 핸드폰만 본다면 당신은?
+                    span 오랜만에 만난 친구가
+                        br
+                        | 계속 핸드폰만 본다면 당신은?
                 .main__image
                     img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C7%EC%9D%B4%EB%AF%B8%EC%A7%80.png")
         .buttons
