--- a/src/views/screens/question9.pug
+++ b/src/views/screens/question9.pug
@@ -7,7 +7,11 @@
                 img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C9%EC%88%AB%EC%9E%90%EC%9B%90.png")
             .main
                 .main__text
-                    span 별로 안 친하다고 생각한 친구에게<br>생일 기프티콘 선물을 받았다면 당신은?
+                    span 별로 안 친하다고 생각한
+                        br
+                        | 친구에게 생일 기프티콘 선물을
+                        br
+                        | 받았다면 당신은?
                 .main__image
                     img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C9%EC%9D%B4%EB%AF%B8%EC%A7%80.png")
         .buttons
