--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -8,7 +8,7 @@ html(lang="en")
         meta(property="og:title" content="관태기 테스트")
         meta(property="og:description" content="관계에 권태기가 온 건 아닐까?")
         link(rel="stylesheet", href="styles.css")
-        link(href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500;700;900&display=swap" rel="stylesheet")
+        link(href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@800&family=Noto+Sans+KR:wght@500;700;900&display=swap" rel="stylesheet")
         title 관태기 테스트
     body(oncontextmenu="return false" ondragstart="return false" onselectstart="return false")
         main
