--- a/src/assets/scss/screens/iphone4.scss
+++ b/src/assets/scss/screens/iphone4.scss
@@ -1,4 +1,4 @@
-@media (min-height:482px) and (max-height: 570px){
+@media (max-height: 480px){
     body{
         .slider{
             .start{
@@ -6,37 +6,37 @@
                     .content__row{
                         .topImage{
                             img.description{
-                                top: -29px;
-                                right: -55px;
-                                height: 34px;
+                                top: -27px;
+                                right: -53px;
+                                height: 32px;
                             }
                             img.main{
-                                height: 90px;
+                                height: 85px;
                             }
                         }
                         .title{
                             div:nth-child(1){
-                                font-size: 22px;
+                                font-size: 20px;
                             }
                             div:nth-child(2){
-                                font-size: 26px;
+                                font-size: 24px;
                             }
                             div:nth-child(3){
                                 padding: 5px 7px;
-                                font-size: 13px;
+                                font-size: 12px;
                             }
                         }
                     }
                     .bookImage{
                         margin: 15px;
                         img{
-                            height: 180px;
+                            height: 150px;
                         }
                     }
                     .startBtn{
                         .button{
                             img{
-                                height: 75px;
+                                height: 67px;
                             }
                         }
                     }
@@ -47,11 +47,12 @@
             .slide__content{
                 width: 90%;
                 .topImage{
-                    top: -15px;
+                    top: -10px;
                 }
                 .content__row{
-                    margin-top: 22px;
-                    padding-top: 35px;
+                    margin-top: 23px;
+                    padding-top: 28px;
+                    margin-bottom: 7px;
                     .count{
                         top: -18px;
                         img{
@@ -60,14 +61,14 @@
                     }
                     .main{
                         .main__text{
-                            margin-bottom: 20px;
+                            margin-bottom: 10px;
                             span{
-                                font-size: 14px;
+                                font-size: 13px;
                             }
                         }
                         .main__image{
                             img{
-                                height: 180px;
+                                height: 150px;
                             }
                         }
                     }
@@ -75,7 +76,7 @@
                 .buttons{
                     .button{
                         padding: 7px 0;
-                        font-size: 13px;
+                        font-size: 12px;
                     }
                 }
             }
@@ -84,30 +85,30 @@
             .slide__content{
                 .content__row{
                     .questionTitle{
-                        font-size: 17px;  
+                        font-size: 14px;  
                         margin-bottom: 10px; 
                         span{
                             focus{
-                                font-size: 18px;
+                                font-size: 15px;
                             }
                         }
                     }
                     .mainTitle{
                         span{
-                            font-size: 18px;
+                            font-size: 15px;
                         }
                     }
                 }
                 .bookImage{
-                    margin: 20px 0;
+                    margin: 10px 0;
                     img{
-                        height: 180px;
+                        height: 150px;
                     }
                 }
                 .loadingComment{
                     .comment{
                         span{
-                            font-size: 14px;
+                            font-size: 12px;
                         }
                     }
                     .loadingAnimation{
@@ -122,7 +123,7 @@
                     .resultBtn{
                         .button{
                             img{
-                                height: 90px;
+                                height: 80px;
                             }
                         }
                     }
