--- a/src/assets/scss/screens/loading.scss
+++ b/src/assets/scss/screens/loading.scss
@@ -94,6 +94,8 @@
             }
             .resultBtn{
                 width: fit-content;
+                opacity: 0;
+                pointer-events: none;
                 .button{
                     img{
                         height: 130px;
