--- a/src/views/screens/loading.pug
+++ b/src/views/screens/loading.pug
@@ -8,7 +8,7 @@
                     | 가 궁금하다면?
             .mainTitle
                 span 에세이
-                    focus《적당히 가까운 사이를
+                    focus 《적당히 가까운 사이》를
                     br
                     | 가까운 서점에서 만나보세요!
         .bookImage
@@ -18,10 +18,10 @@
             .comment
                 span 관태기 테스트는 댄싱스네일 작가의 에세이
                     br
-                    focus《적당히 가까운 사이》
+                    focus 《적당히 가까운 사이》
                     br
                     | 에피소드를 재구성해 제작하였습니다.
-            .loadingAnimation
+            .loadingAnimation#jsLoadingAnimation
                 .dot
                 .dot
                 .dot
@@ -31,6 +31,6 @@
                 .dot
                 .dot
                 .dot
-            .resultBtn
+            .resultBtn#jsResultBtn
                 .button.selectBtn(data-id="loading" ontouchstart="")
                     img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EA%B2%B0%EA%B3%BC%EB%A1%9C%EB%94%A9/%EA%B2%B0%EA%B3%BC%ED%99%95%EC%9D%B8%EB%B2%84%ED%8A%BC2.png")
