--- a/src/views/screens/start.pug
+++ b/src/views/screens/start.pug
@@ -10,7 +10,7 @@
                 div 나의 관계 유형은?
         .bookImage
             //- 샘플이미지
-            img(src="https://cdn.imweb.me/thumbnail/20200316/2948e081b267c.jpg" alt="")
+            img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%A9%94%EC%9D%B8/sampleBook.png")
         .startBtn
             .button(ontouchstart="")
                 img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%A9%94%EC%9D%B8/%EC%8B%9C%EC%9E%91%EB%B2%84%ED%8A%BC.png")
