--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -8,9 +8,12 @@ html(lang="en")
         meta(property="og:title" content="관태기 테스트")
         meta(property="og:description" content="관계에 권태기가 온 건 아닐까?")
         link(rel="stylesheet", href="styles.css")
-        link(href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@800&family=Noto+Sans+KR:wght@500;700;900&display=swap" rel="stylesheet")
+        link(href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@800&family=Noto+Sans+KR:wght@500;900&display=swap" rel="stylesheet")
         title 관태기 테스트
     body(oncontextmenu="return false" ondragstart="return false" onselectstart="return false")
+        .resorceLoading#jsResorceLoading
+            img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%A9%94%EC%9D%B8/loadingSample.png")
+            div 로딩중...
         main
             #jsSlider.slider
                 include screens/start
