--- a/src/views/screens/loading.pug
+++ b/src/views/screens/loading.pug
@@ -13,7 +13,7 @@
                     | 가까운 서점에서 만나보세요!
         .bookImage
             //- 샘플이미지
-            img(src="https://cdn.imweb.me/thumbnail/20200316/2948e081b267c.jpg" alt="")
+            img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%A9%94%EC%9D%B8/sampleBook.png")
         .loadingComment
             .comment
                 span 관태기 테스트는 댄싱스네일 작가의 에세이
