--- a/src/assets/scss/screens/iphone7plus.scss
+++ b/src/assets/scss/screens/iphone7plus.scss
@@ -1,5 +1,8 @@
 @media (min-height: 671px) and (max-height: 740px){
     body{
+        .resorceLoading{
+            font-size: 15px;
+        }
         .slider{
             .start{
                 .slide__content{
