--- a/src/assets/scss/screens/iphone5.scss
+++ b/src/assets/scss/screens/iphone5.scss
@@ -1,5 +1,8 @@
 @media (min-height:482px) and (max-height: 570px){
     body{
+        .resorceLoading{
+            font-size: 12px;
+        }
         .slider{
             .start{
                 .slide__content{
