--- a/src/assets/scss/screens/iphone7.scss
+++ b/src/assets/scss/screens/iphone7.scss
@@ -1,5 +1,8 @@
 @media (min-height: 571px) and (max-height: 670px){
     body{
+        .resorceLoading{
+            font-size: 14px;
+        }
         .slider{
             .start{
                 .slide__content{
@@ -122,7 +125,7 @@
                     .resultBtn{
                         .button{
                             img{
-                                height: 120px;
+                                height: 125px;
                             }
                         }
                     }
