--- a/src/views/screens/question10.pug
+++ b/src/views/screens/question10.pug
@@ -18,7 +18,9 @@
                 span 다른 친구와 약속을 잡는다
             .button.selectBtn(data-id="2" ontouchstart="")
                 span ②
-                span 친구와 가려고 했던 곳을 혼자서라도 가 본다
+                span 친구와 가려고 했던 곳을
+                    br
+                    | 혼자서라도 가 본다
             .button.selectBtn(data-id="3" ontouchstart="")
                 span ③
                 span 괜찮다고 하고 속으로 운다
