--- a/src/views/screens/question7.pug
+++ b/src/views/screens/question7.pug
@@ -15,7 +15,9 @@
         .buttons
             .button.selectBtn(data-id="1" ontouchstart="")
                 span ①
-                span 흥미로운 주제를 꺼내 친구의 관심을 돌린다
+                span 흥미로운 주제를 꺼내 친구의
+                    br
+                    | 관심을 돌린다
             .button.selectBtn(data-id="2" ontouchstart="")
                 span ②
                 span 나도 같이 핸드폰을 본다
