--- a/src/assets/scss/config/_colors.scss
+++ b/src/assets/scss/config/_colors.scss
@@ -1,16 +1,16 @@
-$default-bg: #ffeddd;
-$selectBtn: #fad1c7;
-$selectBtn-shadow: #eb9c8e;
-$loading: #f3a09e;
-$type-one: #fee0b9;
-$type-two: #e3f4fa;
-$type-three: #ffe6e5;
-$type-four: #fdfae7;
-$type-one-title: #fe8933;
-$type-two-title: #47b2f9;
-$type-three-title: #fc827c;
-$type-four-title: #f9c63c;
-$type-one-battery: #fec879;
-$type-two-battery: #b3e6f3;
-$type-three-battery: #fdccca;
-$type-four-battery: #faefac;
+$default-bg: rgb(255, 237, 221);
+$selectBtn: rgb(250, 209, 199);
+$selectBtn-shadow: rgb(235, 156, 142);
+$loadingBar: rgb(243, 160, 158);
+$type-one: rgb(254, 224, 185);
+$type-two: rgb(227, 244, 250);
+$type-three: rgb(255, 230, 229);
+$type-four: rgb(253, 250, 231);
+$type-one-title: rgb(254, 137, 51);
+$type-two-title: rgb(71, 178, 249);
+$type-three-title: rgb(252, 130, 124);
+$type-four-title: rgb(249, 198, 60);
+$type-one-battery: rgb(254, 200, 121);
+$type-two-battery: rgb(179, 230, 243);
+$type-three-battery: rgb(253, 204, 202);
+$type-four-battery: rgb(250, 239, 172);
