--- a/src/assets/scss/screens/start.scss
+++ b/src/assets/scss/screens/start.scss
@@ -50,7 +50,7 @@
                     padding: 7px 9px;
                     font-size: 15px;
                     color: $default-bg;
-                    background-color: #f3a09e;
+                    background-color: $loadingBar;
                     border-radius: 10px;
                 }
             }
