--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -8,10 +8,11 @@ html(lang="en")
         meta(property="og:title" content="관태기 테스트")
         meta(property="og:description" content="관계에 권태기가 온 건 아닐까?")
         link(rel="stylesheet", href="styles.css")
+        link(href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@800&family=Noto+Sans+KR:wght@500;900&display=swap" rel="stylesheet")
         link(rel="preload" href="https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream5.woff2" as="font" type="font/woff2" crossorigin)
         link(rel="preload" href="https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream6.woff2" as="font" type="font/woff2" crossorigin)
         link(rel="preload" href="https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream7.woff2" as="font" type="font/woff2" crossorigin)
-        link(href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@800&family=Noto+Sans+KR:wght@500;900&display=swap" rel="stylesheet")
+        link(rel="preload" href="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%A9%94%EC%9D%B8/loadingSample.png" as="image" type="image/png")
         title 관태기 테스트
     body(oncontextmenu="return false" ondragstart="return false" onselectstart="return false")
         .resorceLoading#jsResorceLoading
