--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,4 +1,5 @@
-@import "./config/_colors.scss";
+@import "./config/_colors";
+@import "./config/_animation";
 
 body,html {
     width: 100%;
@@ -32,12 +33,12 @@ body,html {
         font-size: 15px;
         font-family: 'Gothic A1', sans-serif;
         img{
-            animation:spin 2.3s linear infinite;
+            animation: $spin;
             width: 40px;
             margin-bottom:15px;
         }
         div{
-            animation: loading 1.6s linear infinite;
+            animation: $loading;
         }
     }
     main{
@@ -63,7 +64,7 @@ body,html {
         align-items: center;
         width: 100%;
         height: 100%;
-        animation: loaded 1s linear forwards;
+        animation: $loaded;
         .slider {
             width: 100%;
             .slide {
@@ -85,30 +86,3 @@ body,html {
     }
 }
 
-@keyframes loaded{
-    from{
-        opacity: 0;
-    }
-    to{
-        opacity: 1;
-    }
-}
-@keyframes loading{
-    0%{
-        opacity: 1;
-    }
-    50%{
-        opacity: 0;
-    }
-    100%{
-        opacity: 1;
-    }
-}
-@keyframes spin {
-    from{
-        transform: rotate(0);
-    }
-    to{
-        transform:rotate(360deg);
-    }
-}
