--- a/src/assets/scss/config/fonts.scss
+++ b/src/assets/scss/config/fonts.scss
@@ -1,27 +1,24 @@
 @font-face{
     font-family: "SCDream5";
     src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream5.eot");
-    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream5.eot?iefix") format("embedded-opentype"),
-    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream5.woff2") format("woff2")
+    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream5.woff2") format("woff2"),
     url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream5.woff") format("woff"),
-    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream5.ttf") format("truetype");
-    src:local("@"),url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream5.woff2") format("woff2");
+    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream5.ttf") format("truetype"),
+    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream5.eot?#iefix") format("embedded-opentype");
 }
 @font-face{
     font-family: "SCDream6";
     src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream6.eot");
-    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream6.eot?iefix") format("embedded-opentype"),
-    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream6.woff2") format("woff2"),
+    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream6.woff2") format("woff2"),
     url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream6.woff") format("woff"),
-    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream6.ttf") format("truetype");
-    src:local("@"),url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream6.woff2") format("woff2");
+    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream6.ttf") format("truetype"),
+    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream6.eot?#iefix") format("embedded-opentype");
 }
 @font-face{
     font-family: "SCDream7";
     src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream7.eot");
-    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream7.eot?iefix") format("embedded-opentype"),
-    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream7.woff2") format("woff2"),
+    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream7.woff2") format("woff2"),
     url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream7.woff") format("woff"),
-    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream7.ttf") format("truetype");
-    src:local("@"),url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream7.woff2") format("woff2");
+    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream7.ttf") format("truetype"),
+    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream7.eot?#iefix") format("embedded-opentype");
 }
