result image save testing

--- a/src/assets/scss/screens/result.scss
+++ b/src/assets/scss/screens/result.scss
@@ -29,11 +29,10 @@
                         margin-right: 5px;
                     }
                     span{
-                        font-family: 'Noto Sans KR', sans-serif;
-                        font-weight: 500;
-                        font-size: 18px;
+                        font-family: 'SCDream5';
+                        font-size: 17px;
                         strong{
-                            font-weight: 900;
+                            font-family: "SCDream6";
                         }
                     }
                 }
