--- a/src/views/screens/start.pug
+++ b/src/views/screens/start.pug
@@ -2,15 +2,15 @@
     .slide__content
         .content__row
             .topImage
-                img.description(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%A9%94%EC%9D%B8/%EA%B4%80%ED%83%9C%EA%B8%B0%EC%84%A4%EB%AA%85.png")
-                img.main(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%A9%94%EC%9D%B8/%EB%A9%94%EC%9D%B8%EC%9D%B4%EB%AF%B8%EC%A7%80.png")
+                img.description(data-src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%A9%94%EC%9D%B8/%EA%B4%80%ED%83%9C%EA%B8%B0%EC%84%A4%EB%AA%85.png")
+                img.main(data-src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%A9%94%EC%9D%B8/%EB%A9%94%EC%9D%B8%EC%9D%B4%EB%AF%B8%EC%A7%80.png")
             .title
                 div 재미로보는
                 div 관태기 테스트
                 div 나의 관계 유형은?
         .bookImage
             //- 샘플이미지
-            img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%A9%94%EC%9D%B8/sampleBook.png")
+            img(data-src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%A9%94%EC%9D%B8/sampleBook.png")
         .startBtn
             .button(ontouchstart="")
-                img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%A9%94%EC%9D%B8/%EC%8B%9C%EC%9E%91%EB%B2%84%ED%8A%BC.png")
+                img(data-src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%A9%94%EC%9D%B8/%EC%8B%9C%EC%9E%91%EB%B2%84%ED%8A%BC.png")
