--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,6 +1,24 @@
 @import "./config/_colors";
 @import "./config/_animation";
 
+@media (orientation: landscape)and(min-width:560px)and (max-width: 900px) {
+    html{
+        body{
+            .preventHorizonMode{
+                display: flex;
+            }
+        }
+    }
+}
+@media (min-width: 901px){
+    html{
+        body{
+            .preventHorizonMode{
+                display: none;
+            }
+        }
+    }
+}
 body,html {
     width: 100%;
     height: 100%;
@@ -31,15 +49,22 @@ body,html {
         justify-content: center;
         align-items: center;
         font-size: 15px;
-        font-family: 'Gothic A1', sans-serif;
-        img{
-            animation: $spin;
-            width: 40px;
-            margin-bottom:15px;
-        }
+        font-family: "SCDream5";
         div{
             animation: $loading;
         }
+    }
+    .preventHorizonMode{
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        display: none;
+        justify-content: center;
+        align-items: center;
+        font-size: 17px;
+        font-family: "SCDream5";
+        background-color: $default-bg;
+        z-index: 9999;
     }
     main{
         &.typeOne{
