--- a/src/views/screens/question1.pug
+++ b/src/views/screens/question1.pug
@@ -1,10 +1,10 @@
 .slide.question.q1
     .slide__content
         .topImage
-            img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C1,11%EC%83%81%EB%8B%A8%EB%B0%B0%EA%B2%BD.png")
+            img(data-src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C1,11%EC%83%81%EB%8B%A8%EB%B0%B0%EA%B2%BD.png")
         .content__row
             .count
-                img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C1%EC%88%AB%EC%9E%90%EC%9B%90.png")
+                img(data-src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C1%EC%88%AB%EC%9E%90%EC%9B%90.png")
             .main
                 .main__text
                     span 혼자만의 시간을 보내고 있던 당신,
@@ -13,7 +13,7 @@
                         br
                         | 단톡방에 초대된다면 당신은?
                 .main__image
-                    img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C1%EC%9D%B4%EB%AF%B8%EC%A7%80.png")
+                    img(data-src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C1%EC%9D%B4%EB%AF%B8%EC%A7%80.png")
         .buttons
             .button.selectBtn(data-id="1" ontouchstart="")
                 span ①
