add galaxy flip, fold, lg G series, galaxy s20 etc. design

--- a/src/assets/scss/screens/iphone4.scss
+++ b/src/assets/scss/screens/iphone4.scss
@@ -149,7 +149,7 @@
                         }
                     }
                     .content__row{
-                        margin: 20px 0;
+                        margin-top: 20px;
                         .mainImage{
                             margin-bottom: 15px;
                             img{
@@ -171,11 +171,11 @@
                             }
                         }
                     }
-                    .sharedSNS{
-                        .sharedImage{
-                            img{
-                                height: 34px;
-                            }
+                }
+                .sharedSNS{
+                    .sharedImage{
+                        img{
+                            height: 34px;
                         }
                     }
                 }
