--- a/src/assets/scss/screens/ipad.scss
+++ b/src/assets/scss/screens/ipad.scss
@@ -153,7 +153,7 @@
                         }
                     }
                     .content__row{
-                        margin: 35px;
+                        margin-top: 35px;
                         .mainImage{
                             margin-bottom: 30px;
                             img{
@@ -175,12 +175,12 @@
                             }
                         }
                     }
-                    .sharedSNS{
-                        .sharedImage{
-                            margin-bottom: 20px;
-                            img{
-                                height: 58px;
-                            }
+                }
+                .sharedSNS{
+                    .sharedImage{
+                        margin-bottom: 20px;
+                        img{
+                            height: 58px;
                         }
                     }
                 }
