--- a/src/assets/scss/screens/iphoneXr.scss
+++ b/src/assets/scss/screens/iphoneXr.scss
@@ -153,7 +153,7 @@
                         }
                     }
                     .content__row{
-                        margin: 45px 0;
+                        margin-top: 45px;
                         .mainImage{
                             margin-bottom: 30px;
                             img{
@@ -175,11 +175,11 @@
                             }
                         }
                     }
-                    .sharedSNS{
-                        .sharedImage{
-                            img{
-                                height: 49px;
-                            }
+                }
+                .sharedSNS{
+                    .sharedImage{
+                        img{
+                            height: 49px;
                         }
                     }
                 }
