--- a/src/assets/scss/screens/question.scss
+++ b/src/assets/scss/screens/question.scss
@@ -92,7 +92,7 @@
                 }
                 &:active {
                     background-color: $selectBtn-shadow;
-                    transform: translateY(1px);
+                    transform: translateY(1px) translateX(1px);
                     box-shadow: -1px -2px 3px $selectBtn;
                 }
             }
