--- a/src/assets/scss/config/_animation.scss
+++ b/src/assets/scss/config/_animation.scss
@@ -3,7 +3,19 @@ $nextElSlide: nextElSlide 0.6s linear forwards 0.2s;
 $resultSlide: resultSlide 0.6s linear forwards 0.8s;
 $loaded: loaded 0.8s linear forwards;
 $loading: loading 1.6s linear infinite;
-$spin: spin 2.3s linear infinite;
+$floating: floating 3s linear infinite;
+$blinkBlink: loading 2.3s linear infinite;
+$slowBlinkBlink: slowBlinkBlink 2s linear infinite;
+$vibration: vibration 1s ease-in-out infinite;
+$tail: tail 2s linear infinite;
+$upElevator: upElevator 1.6s linear infinite;
+$spin: spin 2.8s linear infinite;
+$heartBlink: heartBlink;
+$cloud1: cloud1 9s linear infinite;
+$cloud2: cloud2 9s linear infinite;
+$bus1: bus1 6s linear infinite 1s;
+$bus2: bus2 6s linear infinite 0.5s;
+$bus3: bus3 6s linear infinite;
 
 @keyframes activeElSlide {
     from {
@@ -64,11 +76,194 @@ $spin: spin 2.3s linear infinite;
         opacity: 1;
     }
 }
-@keyframes spin {
-    from{
+@keyframes heartBlink {
+    0%{
+        opacity: 1;
+    }25%{
+        opacity: 0;
+    }75%{
+        opacity: 0;
+    }100%{
+        opacity: 1;
+    }
+}
+@keyframes slowBlinkBlink{
+    0%{
+        opacity: 0;
+    }20%{
+        opacity: 1;
+    }80%{
+        opacity: 1;
+    }100%{
+        opacity: 0;
+    }
+}
+@keyframes floating {
+    0% {
+        transform: translateY(0);
+    }50%{
+        transform: translateY(-5px);
+    }100%{
+        transform: translateY(0);
+    }
+}
+@keyframes vibration{
+    0%{
+        transform: rotate(0);
+    }5%{
+        transform: rotate(3deg);
+    }20%{
+        transform: rotate(-3deg);
+    }30%{
+        transform: rotate(0);
+    }100%{
         transform: rotate(0);
     }
-    to{
-        transform:rotate(360deg);
+}
+@keyframes tail {
+    0% {
+        transform: matrix(1,0,0,1,0,0);
+    }50%{
+        transform: matrix(1,-0.17,0.18,1,0.6,-2);
+    }100%{
+        transform: matrix(1,0,0,1,0,0);
+    }
+}
+@keyframes upElevator {
+    0%{
+        transform: translateY(-4px);
+        opacity: 1;
+    }20%{
+        transform: translateY(-15px);
+        opacity: 1;
+    }30%{
+        transform: translateY(-15px);
+        opacity: 0;
+    }50%{
+        transform: translateY(15px);
+        opacity: 0;
+    }60%{
+        transform: translateY(15px);
+        opacity: 1;
+    }80%{
+        transform: translateY(-4px);
+        opacity: 1;
+    }100%{
+        transform: translateY(-4px);
+        opacity: 1;
+    }
+}
+@keyframes spin{
+    0%{
+        transform: rotate(0);
+    }60%{
+        transform: rotate(-360deg);
+    }100%{
+        transform: rotate(-360deg);
+    }
+}
+@keyframes cloud1 {
+    0%{
+        transform: translateX(0);
+        opacity:1;
+    }70%{
+        transform: translateX(380px);
+        opacity:1;
+    }71%{
+        transform: translateX(380px);
+        opacity:0;
+    }72%{
+        transform: translateX(-150px);
+        opacity:0;
+    }75%{
+        transform: translateX(-150px);
+        opacity:1;
+    }100%{
+        transform: translateX(0);
+        opacity:1;
+    }
+}
+@keyframes cloud2 {
+    0%{
+        transform: translateX(0);
+        opacity:1;
+    }30%{
+        transform: translateX(180px);
+        opacity:1;
+    }31%{
+        transform: translateX(180px);
+        opacity:0;
+    }32%{
+        transform: translateX(-340px);
+        opacity:0;
+    }35%{
+        transform: translateX(-340px);
+        opacity:1;
+    }100%{
+        transform: translateX(0);
+        opacity:1;
+    }
+}
+@keyframes bus1{
+    0%{
+        transform: translate(0);
+        opacity: 1;
+    }70%{
+        transform: translate(-250px,-80px);
+        opacity: 1;
+    }71%{
+        transform: translate(-250px,-80px);
+        opacity: 0;
+    }72%{
+        transform: translate(100px,35px);
+        opacity: 0;
+    }73%{
+        transform: translate(100px,35px);
+        opacity: 1;
+    }100%{
+        transform: translate(0);
+        opacity: 1;
+    }
+}
+@keyframes bus2{
+    0%{
+        transform: translate(0);
+        opacity: 1;
+    }40%{
+        transform: translate(-130px,-40px);
+        opacity: 1;
+    }41%{
+        transform: translate(-130px,-40px);
+        opacity: 0;
+    }42%{
+        transform: translate(200px,67px);
+        opacity: 0;
+    }43%{
+        transform: translate(200px,67px);
+        opacity: 1;
+    }100%{
+        transform: translate(0);
+        opacity: 1;
+    }
+}
+@keyframes bus3{
+    0%{
+        transform: translate(0);
+        opacity: 1;
+    }20%{
+        transform: translate(-50px,-15px);
+        opacity: 1;
+    }21%{
+        transform: translate(-50px,-15px);
+        opacity: 0;
+    }22%{
+        transform: translate(250px,80px);
+        opacity: 0;
+    }23%{
+        transform: translate(250px,80px);
+        opacity: 1;
+    }100%{
+        transform: translate(0);
+        opacity: 1;
     }
 }
