--- a/src/views/screens/question6.pug
+++ b/src/views/screens/question6.pug
@@ -1,4 +1,4 @@
-.slide.question.q1
+.slide.question
     .slide__content
         .topImage
             img(data-src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C6%EC%83%81%EB%8B%A8%EB%B0%B0%EA%B2%BD.png")
@@ -12,7 +12,7 @@
                         | 졸업하고 처음 얼굴을 보는
                         br
                         | 동창을 만났다면 당신은?
-                .main__image
+                .main__image.q6
                     img(data-src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C6%EC%9D%B4%EB%AF%B8%EC%A7%80.png")
         .buttons
             .button.selectBtn(data-id="1" ontouchstart="")
