--- a/src/views/screens/question8.pug
+++ b/src/views/screens/question8.pug
@@ -1,4 +1,4 @@
-.slide.question.q1
+.slide.question
     .slide__content
         .topImage
             img(data-src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C8%EC%83%81%EB%8B%A8%EB%B0%B0%EA%B2%BD.png")
@@ -10,8 +10,15 @@
                     span 친구의 SNS에 안물안궁 일상이
                         br
                         | 계속 올라온다면 당신은?
-                .main__image
+                .main__image.q8
                     img(data-src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C8%EC%9D%B4%EB%AF%B8%EC%A7%80.png")
+                    img(data-src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C8%EC%95%84%EC%9D%B4%ED%85%9C1-1.png")
+                    img(data-src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C8%EC%95%84%EC%9D%B4%ED%85%9C1-2.png")
+                    img(data-src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C8%EC%95%84%EC%9D%B4%ED%85%9C2-1.png")
+                    img(data-src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C8%EC%95%84%EC%9D%B4%ED%85%9C2-2.png")
+                    img(data-src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C8%EC%95%84%EC%9D%B4%ED%85%9C3-1.png")
+                    img(data-src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C8%EC%95%84%EC%9D%B4%ED%85%9C3-2.png")
+                    img(data-src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C8%EC%95%84%EC%9D%B4%ED%85%9C4.png")
         .buttons
             .button.selectBtn(data-id="1" ontouchstart="")
                 span ①
