--- a/src/views/screens/question9.pug
+++ b/src/views/screens/question9.pug
@@ -1,4 +1,4 @@
-.slide.question.q1
+.slide.question
     .slide__content
         .topImage
             img(data-src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C5,9%EC%83%81%EB%8B%A8%EB%B0%B0%EA%B2%BD.png")
@@ -12,8 +12,14 @@
                         | 친구에게 생일 기프티콘 선물을
                         br
                         | 받았다면 당신은?
-                .main__image
+                .main__image.q9
                     img(data-src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C9%EC%9D%B4%EB%AF%B8%EC%A7%80.png")
+                    .maskQ9
+                        img(data-src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C9%EC%95%84%EC%9D%B4%ED%85%9C1.png")
+                        img(data-src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C9%EC%95%84%EC%9D%B4%ED%85%9C2.png")
+                        img(data-src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C9%EC%95%84%EC%9D%B4%ED%85%9C3.png")
+                        img(data-src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C9%EC%95%84%EC%9D%B4%ED%85%9C1.png")
+                        img(data-src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C9%EC%95%84%EC%9D%B4%ED%85%9C5.png")
         .buttons
             .button.selectBtn(data-id="1" ontouchstart="")
                 span ①
