--- a/src/views/screens/start.pug
+++ b/src/views/screens/start.pug
@@ -14,3 +14,4 @@
         .startBtn
             .button(ontouchstart="")
                 img(data-src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%A9%94%EC%9D%B8/%EC%8B%9C%EC%9E%91%EB%B2%84%ED%8A%BC.png")
+                img(data-src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%A9%94%EC%9D%B8/%EC%8B%9C%EC%9E%91%EB%B2%84%ED%8A%BC%EC%95%84%EC%9D%B4%ED%85%9C1.png")
